syntax = "proto3";

package proto;

service SearchService {
    rpc Search(SearchReq) returns (SearchRes) {}
}

message SearchReq{
    string  request  = 1;
}

message SearchRes{
    string  response = 1;
}